# all_code

./: .all-contributorsrc  .gitignore  README.md  all_code.py  full_code.txt  pyproject.toml  read.me  test_all_code.py
src/all_code/: cli.py
