[project]
name = "all-code"
version = "0.2.0"
description = "All Code Aggregator"
readme = "README.md"
authors = [
    { name = "Spencer Bentley", email = "" }
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.15.1",
]

[project.scripts]
all-code = "all_code.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
