[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "all-code"
version = "0.4.0"
description = "Aggregate code files into a single file with a directory tree."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
  { name = "Spencer Bentley" }
]
dependencies = []

[project.scripts]
all-code = "all_code:main"

[tool.hatch.build.targets.sdist]
include = [
  "all_code.py",
  "README.md"
]

[tool.hatch.build.targets.wheel]

